2019-08-17  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdoc.c, spc_pdfm.c: Workaround for some problems reported
	in https://tug.org/pipermail/dvipdfmx/2019-August/000021.html.
	Try to deref page resource dictionary when adding page resources.
	Allow direct objects for page resources.
	* configure.ac: Version 20190817.

2019-08-05  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c: Ignore zlib error while uncompressing data.
	Z_DATA_ERROR is ignored when avail_in is 0.
	Accepting some incorrectly written compressed data.
	Reported by Jens Adam:
	https://tug.org/pipermail/tex-live/2019-August/043983.html
	* dvipdfmx.c: Fix a bug that 'm' option was broken.
	This option must be processed before dvi_init().
	Bug reported to TUG mailing list:
	https://tug.org/pipermail/dvipdfmx/2019-July/000019.html
	* configure.ac: Version 20190805.

2019-08-03  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_gsub.c: Fix a bug that OTL coverage data were not read and
	were initialized to wrong values when LigatureSetCount was 0.
	Similar issue is found also in alternate substitution.
	Reported by Jens Adam:
	https://tug.org/pipermail/tex-live/2019-August/043983.html

2019-06-30  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfdev.c: Fix a bug that fake-bold is not handled properly
	in some situations as reported in
	https://tug.org/pipermail/dvipdfmx/2019-June/000014.html.
	When text rendering mode is changed within a text block which
	is enclosed by q and Q, the change does not affect subsequent
	text blocks. Current implementation of text handling is not
	robust so we may need to reconsider it.

2019-06-01  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* unicode.c: Fix a bug that end of buffer check was wrong.

2019-05-26  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cmap_write.c, dvipdfmx.c, pdfdev.c, pdfdev.h, pdfdoc.c
	spc_dvips.c, spc_pdfm.c, truetype.c, xbb.c:
	Fix for compiler warnings.